--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                     <img src="assets/icons/iconspace-logo.svg" alt="iconspace">
                                 </a>
                             </li>
-                            <li><a href="#">Products <i class="fa fa-caret-right"></i></a></li>
+                            <li><a href="#">Products <i class="fa fa-caret-down"></i></a></li>
                             <li><a href="#">Blog</a></li>
                         </ul>
                     </div>
