--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <li><a href="#">
                                     <img src="assets/icons/ic-cart.svg" alt="my_cart">
                                 </a></li>
-                            <li class="btn"><a href="#" class="btn-small btn-red">Sign In</a></li>
+                            <li class="btn"><a href="#" class="btn-small btn-red">Sign Up</a></li>
                         </ul>
                     </div>
                 </div>
